[package]
name = "wavebreak"
version = "0.1.0"
authors = ["Zeno <zeno@oxydyze.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["wavebreaker_sdl2", "wavebreaker_util"]

[dependencies]
specs = "0.16"
specs-derive = "0.4"
wavebreaker_sdl2 = { path = "wavebreaker_sdl2" }
wavebreaker_util = { path = "wavebreaker_util" }
